wordpress/wordpress-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: blog
  name: wordpress
  namespace:
spec:
  replicas: 1
  selector:
    matchLabels:
      run: blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: blog
    spec:
      containers:
      - image: bitnami/wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 443
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60
          timeoutSeconds: 6
          periodSeconds: 10
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 6
          periodSeconds: 10
          failureThreshold: 1
        volumeMounts:
        - name: data
          mountPath: /bitnami
      volumes:
      - name: data
        emptyDir: {}
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
