wordpress/mariadb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  labels:
    run: mariadb
spec:
  ports:
  - protocol: TCP
    port: 3300
    targetPort: 3306
  selector:
    run: mariadb
