wordpress/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: blog.kubernetes.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
